--- a/config.ini
+++ b/config.ini
@@ -4,5 +4,7 @@ base_url = https://api.beta.ons.gov.uk/v1
 [DB]
 host = localhost
 port = 5432
-username = ro_vanis
-password = Vani1234
+username = vishal
+password = 
+url = census
+
