--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ base_url = https://api.beta.ons.gov.uk/v1
 [DB]
 host = localhost
 port = 5432
-username = vishal
+username = 
 password = 
-url = census
+url = sidm
 
